# ContextFort

./: .gitignore  COMPLIANCE.md  DATABASE_DIAGRAM.md  DATABASE_SCHEMA.md  DATA_POLICY.md  DEPLOYMENT.md  INSTALLATION.md  INTEGRATION_TEST_RESULTS.md  LICENSE  LOAD_INSTRUCTIONS.md  POSTHOG.md  PRIVACY.md  PROJECT_STRUCTURE.md  QUICK_TEST_GUIDE.txt  README.md  SECURITY.md  SETUP.md  START_HERE.md  TESTING.md  background.js  build-all.sh  build-comet.sh  content.js  dashboard.html  integration-test.html  manifest.json  page-script.js  popup.html  popup.js  screenshot-test.html  test-alert.html  test-notification.html  test-page.html  unified-dashboard.html
backend/: database.py  main.py  post_monitor.db.backup
browser-ai-detector/: ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  server-with-db.py  simple-server.py  test-correlation.sh
browser-ai-detector/browser-extension/: README.md  injector.js  manifest.json
browser-ai-detector/browser-injector/: injector.js
browser-ai-detector/native/: Makefile  bridge.py  dashboard.html  macos_monitor.m  macos_monitor_test
browser-ai-detector/src/: correlator.rs  events.rs  lib.rs  main.rs
chrome-extension/: 404.html  README.md  agent-sandbox.js  auth.js  background.js  background.js.bak  build-config.js  config.js  content.js  dashboard-override.js  dashboard-override.js.backup  dashboard-override.js.backup2  dummy-data.js  export-storage.html  export-storage.js  index.html  load-dummy-data.html  logs  manifest.json  package-lock.json  package.json  popup.html  popup.js  posthog-config.js  rules.json  whitelist.html  (+4 more)
(+2215 files in other folders)
