[package]
name = "click-detection-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "SDK for detecting synthetic browser clicks by correlating OS and DOM events"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[lib]
name = "click_detection_sdk"
path = "src/lib.rs"

[[bin]]
name = "click-detection-sdk"
path = "src/main.rs"
